# ARC

./: .gitignore  .markdownlint-cli2.jsonc  .mcp.json  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.arc/templates/: pages-template.html
.arckit/templates/: ukgov-secure-by-design-template.md
.claude-plugin/: marketplace.json
.codex/prompts/: arckit.operationalize.md  arckit.pages.md  arckit.template-builder.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml  question.yml
.github/workflows/: release.yml
arckit-claude/: CHANGELOG.md
arckit-claude/.claude-plugin/: plugin.json
arckit-claude/commands/: diagram.md  framework.md  wardley.climate.md  wardley.doctrine.md  wardley.gameplay.md  wardley.md  wardley.value-chain.md
arckit-claude/hooks/: hooks.json  session-learner.mjs  sync-guides.mjs
arckit-claude/templates/: pages-template.html
arckit-codex/commands/: arckit.wardley.climate.md  arckit.wardley.doctrine.md  arckit.wardley.md
arckit-copilot/prompts/: arckit-diagram.prompt.md  arckit-pages.prompt.md  arckit-wardley.climate.prompt.md  arckit-wardley.doctrine.prompt.md  arckit-wardley.gameplay.prompt.md  arckit-wardley.prompt.md  arckit-wardley.value-chain.prompt.md
arckit-gemini/: GEMINI.md  README.md  gemini-extension.json
arckit-gemini/agents/: arckit-aws-research.md  arckit-azure-research.md  arckit-datascout.md  arckit-framework.md  arckit-gcp-research.md  arckit-research.md
arckit-gemini/hooks/: hooks.json
arckit-plugin/: .mcp.json  CHANGELOG.md
docs/: CNAME  README.md  commands.html  contributors.html  getting-started.html  guide-viewer.html  guides.html  heroes.css  index.html  manifest.json  robots.txt  roles.html  theme.css  theme.js  use-cases.html
scripts/: bump-version.sh  converter.py  create-sdg-repo.py  push-extensions.sh
(+161 files in other folders)
