[project]
name = "arc-cli"
version = "1.0.1"
description = "Arc CLI - CMA CGM Enterprise Architecture Copilot"
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich",
    "httpx[socks]",
    "platformdirs",
    "readchar",
    "truststore>=0.10.4",
]
authors = [{ name = "Nicolas CORREIA", email = "ho.ncorreia@cma-cgm.com" }]
readme = "README.md"
license = { text = "MIT" }
keywords = [
    "architecture",
    "cma-cgm",
    "enterprise",
    "governance",
    "procurement",    
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
    "Topic :: System :: Systems Administration",
]

[project.urls]
Homepage = "https://github.com/NicoMf2/ARC"
Documentation = "https://github.com/NicoMf2/ARC/blob/main/README.md"
Repository = "https://github.com/NicoMf2/ARC"
Issues = "https://github.com/NicoMf2/ARC/issues"

[project.scripts]
arc = "arc_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/arc_cli"]

[tool.hatch.build.targets.wheel.shared-data]
"scripts" = "share/arc/scripts"
".arc" = "share/arc/.arc"
"docs" = "share/arc/docs"
"docs/DEPENDENCY-MATRIX.md" = "share/arc/docs/DEPENDENCY-MATRIX.md"
"docs/WORKFLOW-DIAGRAMS.md" = "share/arc/docs/WORKFLOW-DIAGRAMS.md"
"VERSION" = "share/arc/VERSION"
"CHANGELOG.md" = "share/arc/CHANGELOG.md"
"arc-copilot" = "share/arc/arc-copilot"
